force-app/main/default/objects/Revenue_Projection__c/Revenue_Projection__c.object-meta.xml
<CustomObject>
    <label>Revenue Projection</label>
    <nameField>
        <displayFormat>PROJ-REV{000000}</displayFormat>
        <label>Revenue Projection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Projections</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>