force-app/main/default/objects/Revenue_Projection__c/fields/Actual_Monthly_Fee__c.field-meta.xml
<CustomField>
    <fullName>Actual_Monthly_Fee__c</fullName>
    <label>Actual Monthly Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>