force-app/main/default/objects/Revenue_Projection__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>Revenue Projections</relationshipLabel>
    <relationshipName>Revenue_Projections</relationshipName>
    <type>Lookup</type>
</CustomField>