force-app/main/default/objects/Revenue_Projection__c/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <label>Line of Business</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>