force-app/main/default/objects/Revenue_Projection__c/fields/YearMonth__c.field-meta.xml
<CustomField>
    <fullName>YearMonth__c</fullName>
    <formula>TEXT(Year__c) + TEXT(Month__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YearMonth</label>
    <type>Text</type>
</CustomField>